--- a/selector4.css
+++ b/selector4.css
@@ -1,27 +1,42 @@
+@import url(//fonts.googleapis.com/css?family=Oswald:700);
 
-
-body     {
-  background:#231F20;
-  text-align:center;
+body {
+  background: #231f20;
+  text-align: center;
 }
 
-h1         {
-  color:#FFF;
-  font-family:'Oswald';
-  font-weight:700;
-  position:relative;  
-  margin:30px auto;
-  text-transform:uppercase;
-  width:550px;
+h1 {
+  color: #fff;
+  font-family: "Oswald";
+  font-weight: 700;
+  position: relative;
+  margin: 30px auto;
+  text-transform: uppercase;
+  width: 505px;
 }
 
-p::before {
-content: '';
-background:red;
-display: block;
-height: 10px;
-width: 10px;
+h1:before,
+h1:after {
+  background: #4a90e2;
+  content: "";
+  display: block;
+  height: 30px;
+  position: absolute;
+  width: 25px;
+}
 
+h1:before {
+  left: 0;
+  top: 9px;
+  border-radius: 90px 0 0 90px;
+ 
+}
+
+h1:after {
+  right: 0;
+  top: 9px;
+  border-radius: 0 90px 90px 0;
+  
 }
 
 
